# decorators

./: .gitignore  CONTEXT_SNAPSHOT.md  README.md  docker-compose.test-db.yml  pyproject.toml
.github/workflows/: publish.yml
decorators/: __init__.py
decorators/cli/: USAGE.md  __init__.py  container.py  dispatcher.py  parser.py  plugins.py  registry.py
decorators/db/: USAGE.md  __init__.py  decorators.py  errors.py  metadata.py  registry.py  relations.py  schema.py
tests/: conftest.py  test_cli_registry.py  test_cli_registry_edge_cases.py  test_db_registry.py  test_db_registry_edge_cases.py  test_db_registry_fastapi_integration.py  test_db_registry_migration.py  test_db_registry_spec_features.py
tests/cli/: test_cli_error_handling.py  test_cli_exception_context.py  test_cli_interactive_shell.py  test_cli_registry.py  test_cli_registry_edge_cases.py  test_cli_registry_instance_mode.py  test_di_future_annotations.py  test_error_handling.py  test_interactive_shell.py
tests/core/: test_registry_contracts.py
tests/cron/: test_cron_daemon_cli.py  test_cron_module_runtime.py  test_cron_registry_instance_mode.py  test_cron_registry_runtime.py  test_cron_retry_runtime.py  test_cron_workspace.py
tests/db/: test_concurrency_sqlite.py  test_db_error_handling.py  test_db_field_metadata.py  test_db_registry.py  test_db_registry_migration.py  test_db_registry_refactor_regressions.py  test_exception_context.py  test_mysql_type_mapping.py  test_password_hashing.py  test_relationship_edge_cases.py  test_rename_table.py  test_rename_table_backends.py  (+2 more)
(+60 files in other folders)
